--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: Data Science: Making It Simple, Yet Significant
-subtitle: This is where I will tell my friends way too much about me
+title: Artin Sinani
+subtitle: Making Data Science Simple, Yet Significant
 use-site-title: true
 ---
 
