--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: Artin Sinani
-subtitle: Making Data Science Simple, Yet Significant
+subtitle: Artin Sinani
 use-site-title: true
 ---
 
