--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: Artin Sinani
-subtitle: Data Science: Making It Simple, Yet Significant
+title: "Artin Sinani"
+subtitle: "Data Science: Making It Simple, Yet Significant"
 use-site-title: true
 ---
 
