--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@ title: "Artin Sinani"
 subtitle: "Data Science: Making It Simple, Yet Significant"
 use-site-title: true
 ---
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-138161877-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-138161877-1');
+</script>
 
 <div class="posts-list">
   {% for post in paginator.posts %}
